# Faraday-Cup

./: .gitignore  CMakeLists.txt  FaradayCup.cc  GNUmakefile  README  README.md  compile.sh  testanalyses.sh  testrun.sh
Borovsky/: Data
Borovsky/FCbin/: run.in
Cu/FCbin/: CMakeLists.txt  init.mac  init_vis.mac
Cu/data/: in air 2014-01-14.txt  in vacuo 2014-01-15.txt
Cu_KA/FCbin/: .runFaradayCup.cc.swp  CMakeLists.txt  init_vis.mac  runFaradayCup.cc  vis.mac
Cu_KA_AgKA/FCbin/: CMakeLists.txt  runFaradayCup.cc
Docs/Data/: G4-HIT_defectError.csv  G4_HIT_error.csv  HIT_gain.csv
Docs/Paper/: AAPM_abstract.txt  FaradayCup.tex  Makefile  references.bib
Docs/Poster/: baposter.cls  plotFigures.gnu  poster.aux  poster.tex  refs.bib
Docs/Presentations/: ref GoXX poor mans faraday cup.ppt
Docs/presentations/: pfc_methodologyNotes.odp
Docs/whitepaper/: whitepaper.tex
FCbin/: CMakeLists.txt  CMakeLists.txt~  plotHisto.C  run1.mac  run1.mac~  run10000.mac  runFaradayCup.cc  runFaradayCup.in  vis.mac
FCbin/include/: ActionInitialization.hh  Analysis.hh  Analysis.hh~  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  RunAction.hh~  SteppingAction.hh~
FCbin/src/: ActionInitialization.cc  ActionInitialization.cc~  DetectorConstruction.cc  DetectorConstruction.cc~  EventAction.cc  EventAction.cc~  PrimaryGeneratorAction.cc  RunAction.cc  RunAction.cc~  SteppingAction.cc  SteppingAction.cc~
Geo-Optimization/Data/: history
Geo-Optimization/FCbin/: CMakeLists.txt  dataPlot.gnu  gui.mac  plot.C  run.in  run.mac  runFaradayCup.cc
Heidelberg/FCbin/: CMakeLists.txt  GNUmakefile  run-Borovsky.in  run.in  run.mac  runFaradayCup.cc
Models/Borovsky/: CMakeLists.txt
Pure Copper/FCbin/: runFaradayCup.cc
docs/: Changelog  Changelog~  Data  README  README~
docs/Paper/: .FaradayCup.tex.swp  .~lock.calc 141230-6cm diameter.docx#  AAPM_abstract.txt  (+10 more)
include/: Analysis.hh  DetectorConstruction.hh  PrimaryGeneratorAction.hh  UImessenger.hh
scripts/: analyze.sh  cascadeField.m  gui.mac  plotCascadeHisto.m  plotData.sh  plotDepHistoCu.C  plotDepHistoCuKA.C  plotDepHistoCuKA_20151123.C  plotGain.C  plotGainCu.C  plotGainErrorProfileHisto.m  plotGainHistoCu.C  plotGainHistoCuKA.C  plotGainProfileHisto.m  plotHisto.C  plotHistoCu.C  plotHistoCuKA.C  plotHistoKA.C  plotHistoPureCu.C  run.in  run100.mac  run1000.mac  run10000.mac  run100000.mac  run_vis.mac  vis.mac
src/: ActionInitialization.cc  Analysis.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  UImessenger.cc
(+375 files in other folders)
